# VRCX

./: PLUGIN_README.md  implementation_plan.md  package-lock.json
.github/workflows/: github_actions.yml
.kiro/specs/vrcx-local-api-webhook/: design.md  requirements.md  tasks.md
Dotnet/: Program.cs
Dotnet/AppApi/Common/: AppApiCommon.cs
Dotnet/Plugins/: IVRCXPlugin.cs  PluginConfigBridge.cs  PluginLoader.cs  VRCXContext.cs
Dotnet/Plugins/LocalApiPlugin/: ApiRoutes.cs  CefBridge.cs  LocalApiServer.cs
docs/: plugin-api-implementation-plan.md
next/: .env.example  .gitignore  README.md  compose.yml  docker-compose.yml
next/backend/: .dockerignore  Cargo.toml  Dockerfile
next/backend/migrations/: 0001_init.sql
next/backend/src/: main.rs  state.rs
next/backend/src/routes/: mod.rs  users.rs
next/frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
next/frontend/.next/: trace
next/frontend/.next/cache/: config.json
next/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
next/frontend/app/: globals.css  layout.tsx  page.tsx
next/frontend/app/favorites/: page.tsx
next/frontend/app/feed/: page.tsx
next/mcp/: Dockerfile  package-lock.json  package.json  server.js  tsconfig.json
next/mcp/src/: server.ts
next/web/: .dockerignore  Dockerfile  next.config.ts  package.json  tsconfig.json
src/: app.js
src/localization/en/: en.json
src/localization/zh-CN/: en.json
src/plugin/: eventBus.js  webhookPlugin.js
src/stores/: index.js  webhook.js
src/stores/settings/: plugins.js
src/views/Settings/: Settings.vue
(+17 files in other folders)
